test_suite/tests/ui/key/unknown.stderr
error: expected serde key attribute to be a literal
 --> tests/ui/key/unknown.rs:5:19
  |
5 |     #[serde(key = g)]
  |                   ^
